// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Westend Asset Hub PSM > Admin reassignment > setEmergencyAdmin — breaker power moves, old holder locked out > emergency admin: EmergencyAdminChanged event 1`] = `
[
  {
    "data": {
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newAdmin": {
        "system": {
          "Signed": "5CXBdV9LcwG3N4Q6qqJchom24K6joqmGVpS5UkcPMxdjQKi7",
        },
      },
      "oldAdmin": {
        "system": {
          "Signed": "5ERJmjwMhsB63Jfr72jRySZyg2kWiz5vfnrAb4AQdxGY5TAW",
        },
      },
    },
    "method": "EmergencyAdminChanged",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Admin reassignment > setFullAdmin — power moves to the new origin, old one locked out > full admin: FullAdminChanged event 1`] = `
[
  {
    "data": {
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newAdmin": {
        "system": {
          "Signed": "5CXBdV9LcwG3N4Q6qqJchom24K6joqmGVpS5UkcPMxdjQKi7",
        },
      },
      "oldAdmin": {
        "system": {
          "Signed": "5Cd3GknCYy4MFWXG1MwiQrbhYFLSWYk9wEGDX82RSGZH739w",
        },
      },
    },
    "method": "FullAdminChanged",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Circuit breaker and privilege > MintingDisabled — mint stopped, redeem allowed > minting disabled: AssetStatusUpdated event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "status": "MintingDisabled",
    },
    "method": "AssetStatusUpdated",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Debt ceilings > setMaxDebt below outstanding debt — minting paused, redeems work > lower ceiling: MaxDebtUpdated event 1`] = `
[
  {
    "data": {
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newValue": 100000000,
      "oldValue": 10000000000,
    },
    "method": "MaxDebtUpdated",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Debt ceilings > zero ceiling weight — external closed, remainder reweighted > zero weight: AssetCeilingWeightUpdated event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 31000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newValue": "0.00%",
      "oldValue": "50.00%",
    },
    "method": "AssetCeilingWeightUpdated",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Decimal scaling > higher-decimal external — debt scaled down, redemption scaled up > high decimal mint: Minted event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2000)",
            },
            {
              "GeneralIndex": "(rounded 220)",
            },
          ],
        },
        "parents": 1,
      },
      "externalConsumed": 20000000000000000000,
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalFee": 100000,
      "internalReceived": "(rounded 20000000)",
      "who": "5Cd3GknCYy4MFWXG1MwiQrbhYFLSWYk9wEGDX82RSGZH739w",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > External asset management > addExternalAsset — decimals snapshotted, external counted > add external: ExternalAssetAdded event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "ExternalAssetAdded",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > External asset management > removeExternalAsset — per-external configuration wiped, re-approval defaults > remove external: ExternalAssetRemoved event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "ExternalAssetRemoved",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Fee configuration > setMintingFee — event emitted, new rate charged to fee destination > minting fee: MintingFeeUpdated event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newValue": "5.00%",
      "oldValue": "0.50%",
    },
    "method": "MintingFeeUpdated",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Fee configuration > setRedemptionFee — event emitted, new rate charged on redemption > redemption fee: RedemptionFeeUpdated event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "newValue": "5.00%",
      "oldValue": "0.50%",
    },
    "method": "RedemptionFeeUpdated",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Instance lifecycle > create PSM as internal asset owner — instance recorded, deposit held > create PSM: PsmCreated event 1`] = `
[
  {
    "data": {
      "emergencyAdmin": {
        "system": {
          "Signed": "5ERJmjwMhsB63Jfr72jRySZyg2kWiz5vfnrAb4AQdxGY5TAW",
        },
      },
      "feeDestination": "5GbiMDM8uCwfa75C2XT2xo9dL3hQ2UprvT2zNxALLg4rPe1V",
      "fullAdmin": {
        "system": {
          "Signed": "5Cd3GknCYy4MFWXG1MwiQrbhYFLSWYk9wEGDX82RSGZH739w",
        },
      },
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "maxDebt": 10000000000,
    },
    "method": "PsmCreated",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Instance lifecycle > create PSM with zero minimum swap — ZeroMinSwapAmount > zero min swap: ExtrinsicFailed 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x04000000",
          "index": 65,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Westend Asset Hub PSM > Instance lifecycle > remove PSM with approved externals — blocked, then succeeds once withdrawn > remove PSM: PsmRemoved event 1`] = `
[
  {
    "data": {
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "PsmRemoved",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Stale administrator after ownership transfer > former owner keeps full admin and mint; current owner cannot administer or remove > stale admin: Minted event after ownership transfer 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "externalConsumed": 1000000000,
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalFee": 5000000,
      "internalReceived": "(rounded 1000000000)",
      "who": "5Cd3GknCYy4MFWXG1MwiQrbhYFLSWYk9wEGDX82RSGZH739w",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Swaps > mint — collateral to reserve, internal to caller, fee to destination > mint: Minted event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "externalConsumed": 1000000000,
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalFee": 5000000,
      "internalReceived": "(rounded 1000000000)",
      "who": "5Cd3GknCYy4MFWXG1MwiQrbhYFLSWYk9wEGDX82RSGZH739w",
    },
    "method": "Minted",
    "section": "psm",
  },
]
`;

exports[`Westend Asset Hub PSM > Swaps > redeem — reserve released, debt reduced by burned amount > redeem: Redeemed event 1`] = `
[
  {
    "data": {
      "externalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 2000)",
            },
          ],
        },
        "parents": 0,
      },
      "externalReceived": "(rounded 500000000)",
      "internalAsset": {
        "interior": {
          "X2": [
            {
              "PalletInstance": 50,
            },
            {
              "GeneralIndex": "(rounded 50000000)",
            },
          ],
        },
        "parents": 0,
      },
      "internalConsumed": 500000000,
      "internalFee": 2500000,
      "who": "5Cd3GknCYy4MFWXG1MwiQrbhYFLSWYk9wEGDX82RSGZH739w",
    },
    "method": "Redeemed",
    "section": "psm",
  },
]
`;
